flowc/tests/fixtures/resolve_unknown_binding.flow
type User = { id: string }

flow demo(User) -> User {
  x = some_undefined_name
  x
}
